src/objects/CventEvents__EventSharingRule__c.object
<CustomObject>
    <description>Stores the configuration for the programmatic events sharing.</description>
    <fields>
        <fullName>CventEvents__Description__c</fullName>
        <description>Stores the description of the Event Sharing Rule.</description>
        <inlineHelpText>Stores the description of the Event Sharing Rule.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__FilterLogic__c</fullName>
        <description>Indicates what filter logic should be applied to the conditions.</description>
        <inlineHelpText>Indicates what filter logic should be applied to the conditions.</inlineHelpText>
        <label>Filter Logic</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__GroupId__c</fullName>
        <description>Stores the Id of the auxiliary public group which is created in order to incorporate the users.</description>
        <inlineHelpText>Stores the Id of the auxiliary public group which is created in order to incorporate the users.</inlineHelpText>
        <label>Group Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__GroupIds__c</fullName>
        <description>Stores the Ids of the groups to share the events with.</description>
        <inlineHelpText>Stores the Ids of the groups to share the events with.</inlineHelpText>
        <label>Group Ids</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Event Sharing Rule is active.</description>
        <inlineHelpText>Indicates whether the Event Sharing Rule is active.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__Title__c</fullName>
        <description>Stores the title of the Event Sharing Rule.</description>
        <inlineHelpText>Stores the title of the Event Sharing Rule.</inlineHelpText>
        <label>Title</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CventEvents__UserIds__c</fullName>
        <description>Stores the Ids of the users to share the events with.</description>
        <inlineHelpText>Stores the Ids of the users to share the events with.</inlineHelpText>
        <label>User Ids</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <label>Event Sharing Rule</label>
    <listViews>
        <fullName>CventEvents__All</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__Title__c</columns>
        <columns>CventEvents__Description__c</columns>
        <columns>CventEvents__IsActive__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ESR-{00000000}</displayFormat>
        <label>Event Sharing Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Sharing Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>